--- a/2017/10/housing-guide/css/style.css
+++ b/2017/10/housing-guide/css/style.css
@@ -11,8 +11,7 @@ body {
   font: 12em/1 'Open Sans';
   color: #313132;
   max-width: 100%;
-    overflow-x: hidden;
-    position: relative;
+  overflow-x: hidden;
 }
 
 section {
@@ -734,7 +733,7 @@ svg {
 	width: 150px;
 	top: 15%;
 	left: 0px;
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -750,7 +749,7 @@ svg {
 	top: 10%;
 	left: 200px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -766,7 +765,7 @@ svg {
 	top: 35%;
 	left: 550px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -782,7 +781,7 @@ svg {
 	top: 55%;
 	left: 200px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -798,7 +797,7 @@ svg {
 	top: 20%;
 	left: 650px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -814,7 +813,7 @@ svg {
 	top: 17%;
 	left: 50px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -830,7 +829,7 @@ svg {
 	top: 35%;
 	left: 700px;
 
-	position: relative;
+	position: absolute;
 	background-image: url(../img/cloud.svg);
 	background-size:  contain;
 
@@ -839,7 +838,6 @@ svg {
 	-o-animation: moveclouds 85s linear infinite;
 	z-index: 1;
 }
-
 
 @keyframes fadeIn {
   from {
@@ -915,9 +913,6 @@ svg {
 }
 
 @media only screen and (max-width: 850px) {
-	.cloud6, .cloud5, .cloud4, .cloud3, .cloud2, .cloud1, .cloud {
-		left: 0;
-	}
 	#mobile-leaderboard {
 		height: 200px;
 		display: block;
