--- a/2017/10/housing-guide/css/style.css
+++ b/2017/10/housing-guide/css/style.css
@@ -10,7 +10,7 @@ body {
   background: #F7F9FD;
   font: 12em/1 'Open Sans';
   color: #313132;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
